--- a/css/styles.css
+++ b/css/styles.css
@@ -32,6 +32,7 @@ header nav .nav-right-section {
 nav .nav-right-section a {
   margin-right: 10px;
   color: #000000;
+  font-weight: lighter;
 }
 
 nav .nav-right-section .menu-icon {
@@ -91,7 +92,7 @@ main .main-input-container:hover {
 }
 
 main .main-input .search-icon {
-  background-image: url("https://img.icons8.com/android/24/000000/search.png");
+  background-image: url("https://www.pngitem.com/pimgs/m/463-4635654_search-icon-png-image-search-icon-png-transparent.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
@@ -132,4 +133,39 @@ main .main-buttons button {
 main .main-buttons button:hover {
   border-color: 1px solid #c6c6c6;
   box-shadow: 1px 1px 1px #dadce0;
+  color: #222;
+}
+
+footer {
+  width: 100%;
+  height: 60px;
+  display: grid;
+  position: absolute;
+  bottom: 0;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  font-size: 13px;
+  background-color: #f2f2f2;
+  border-top: 1px solid #e4e4e4;
+}
+
+footer ul {
+  margin: 10px;
+  list-style: none;
+  display: flex;
+  padding-left: 0;
+  align-self: center;
+}
+
+footer .footer-left {
+  justify-self: left;
+}
+
+footer .footer-right {
+  justify-self: right;
+}
+
+footer ul li a {
+  margin: 0 10px;
+  color: #5f6368;
 }
